# kinopoisk_bot

./: .env  Dockerfile  README.md  docker-compose.yml  kinopoisk.py  main.py  pyproject.toml  requirements.txt  types_.py
src/: kinopoisk.py  main.py  schema.py  settings.py
