[project]
name = "kinopoisk-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.4",
    "python-telegram-bot>=21.9",
]


[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "B", "Q", "W", "N", "ASYNC", "S"]
lint.flake8-quotes.inline-quotes = "single"
format.quote-style = "single"
