[project]
name = "kinopoisk-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.11.1",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "httpx>=0.28.1",
]


[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "B", "Q", "W", "N", "ASYNC", "S"]
lint.flake8-quotes.inline-quotes = "single"
format.quote-style = "single"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
